Updated maven file which checks build failure when TCs fail