@@ -13,7 +13,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<surefire.fork.count>0</surefire.fork.count>
 		<cucumber.version>4.3.1</cucumber.version>
 		<junit.version>4.11</junit.version>
 		<rest.assured.version>4.1.2</rest.assured.version>
@@ -114,20 +113,16 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
 				<executions>
 					<execution>
 						<configuration>
-							<forkCount>${surefire.fork.count}</forkCount>
-							<reuseForks>false</reuseForks>
-							<argLine>-Duser.language=en</argLine>
-							<argLine>-Xmx1024m</argLine>
-							<argLine>-XX:MaxPermSize=256m</argLine>
-							<argLine>-Dfile.encoding=UTF-8</argLine>
-							<useFile>false</useFile>
+							<testFailureIgnore>true</testFailureIgnore>
 							<includes>
 								<include>**/*_AutomationTest.class</include>
 							</includes>
-							<testFailureIgnore>true</testFailureIgnore>
 						</configuration>
 					</execution>
 				</executions>
